samples/_failures_safe/1761282062_5bc63a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_59e535f9.c: In function ‘main’:
./samples/SAFE/__tmp_59e535f9.c:145:5: error: expected expression at end of input
  145 |     if (graph_add_edge(&g, b, c, 1) <
      |     ^~
./samples/SAFE/__tmp_59e535f9.c:145:5: error: expected declaration or statement at end of input
